--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png">
-<meta name="description" content="eskulap.hu">
-  <title>Bride name & Bridegroom name</title>
+<title>Zoe &amp; Alex</title>
   <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="main.css"/>
-  <script src="https://code.jquery.com/jquery.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Great+Vibes%7CMuli:400,700%7CLibre+Baskerville:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <meta name="viewport" content="width=device-width initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes%7CMuli:400,700%7CLibre+Baskerville:300,400,700" rel="stylesheet">
 </head>
 <body>
   <header class="cover">
