--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png">
-<title>Zoe &amp; Alex</title>
+<title>eskulap.hu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
@@ -14,7 +14,7 @@
       <div class="hero-text-wrapper">
         <div class="hero-text">
           <div class="tagline">We're getting married!</div>
-          <h1>Bride name &amp; Bridegroom name</h1>
+          <h1>Zoe &amp; Alex</h1>
           <span class="date">August 1, 2018</span>
         </div>
       </div>
@@ -100,7 +100,7 @@
   </main>
   <footer>
     <div class="footer-wrapper">
-      <p><small>Made with heart in Budapest ©2018 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small></p>
+      <p><small>Made with heart in Keszthely ©2019 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small></p>
     </div>
   </footer>
 </body>
