--- a/hu.html
+++ b/hu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <html lang="en">
+  <html lang="hu">
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png">
 <title>eskulap.hu</title>
@@ -14,32 +14,32 @@
   <header class="cover">
       <div class="hero-text-wrapper">
         <div class="hero-text">
-          <div class="tagline">We're getting married!</div>
-          <h1>Bride &amp; Bridegroom</h1>
-          <span class="date">August 1, 2018</span>
+          <div class="tagline">Össze fogunk házasodni!</div>
+          <h1>Zita &amp; Alex</h1>
+          <span class="date">2018, August 1</span>
         </div>
       </div>
   </header>
   <main>
     <section class="locations">
-      <h2>Locations</h2>
+      <h2>Helyszínek</h2>
       <div class="blurb">
-        <h3>Ceremony</h3>
+        <h3>Szertartás</h3>
         <img src="assets/rings.png" alt="Ceremony">
-        <div>St. Nicholas Church</div>
-        <div>2. Trinity Square, Budapest</div>
+        <div>Mátyás Templom</div>
+        <div>Budapest, Szentháromság tér 2.</div>
       </div>
       <div class="blurb">
-        <h3>Photos</h3>
+        <h3>Fotók</h3>
         <img src="assets/photos.png" alt="Photoshoot">
-        <div>Liberty Bastion</div>
-        <div>23 Wisdom Road, Budapest</div>
+        <div>Halászbástya</div>
+        <div>Budapest, Szentháromság tér, 1014</div>
       </div>
       <div class="blurb">
         <h3>Party</h3>
         <img src="assets/party.png" alt="Party">
-        <div>Heaven Lounge</div>
-        <div>A38 Ship, Petőfi bridge, Buda side, Budapest</div>
+        <div>A38 Hajó</div>
+        <div>Budapest, Petőfi híd, Budai oldal</div>
       </div>
     </section>
     <section class="program">
@@ -47,9 +47,9 @@
       <div class="program-wrapper">
         <p>"It's going to be somehow, that's for sure."</p>
         <ul>
-          <li>13:45 – Wedding ceremony</li>
-          <li>14:30 – Photos</li>
-          <li>16:00 – Cocktails</li>
+          <li>13:45 – Esküvői szertartás</li>
+          <li>14:30 – Fotók</li>
+          <li>16:00 – Koktélozás </li>
           <li>18:00 – Dinner</li>
           <li>22:00 – Cake</li>
           <li>... - 4:00 –Dance until dawn</li>
